# mmr

./: Makefile.am  Makefile.in  README  README.md  actions.c  actions.h  common.h  config.h.in  config.h.in~  config_parser.c  config_parser.h  configure  configure.ac  endpoints.c  endpoints.h  micro_media_renderer.c  micro_media_renderer.h  micro_media_renderer_main.c  requests.c  requests.h  sample_util.h
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
old/: Makefile  Makefile.in
web/: .RenderingControl-description.xml.swo  .RenderingControl-description.xml.swp  .tvcontrolSCPD.xml.swp  AVTransport-description.xml  device-description.xml  tvdevicedesc.xml
