bin_PROGRAMS=micro_media_renderer
micro_media_renderer_SOURCES=micro_media_renderer.h \
						sample_util.h \
						requests.h \
						actions.h \
						common.h \
						endpoints.h \
						config_parser.h \
						micro_media_renderer_main.c \
						sample_util.c \
						micro_media_renderer.c \
						requests.c \
						actions.c \
					  endpoints.c \
						config_parser.c
